# gomoku-calculator

./: .gitignore  CMakeLists.txt  README.md  start.sh
src/: main.cpp
src/engine/: board.cpp  board.h  evaluator.cpp  evaluator.h  rules.cpp  rules.h  search.cpp  search.h  types.h
src/server/: http_server.cpp  http_server.h  json.cpp  json.h
src/service/: analysis_jobs.cpp  analysis_jobs.h
tests/: test_main.cpp
web/: app.js  index.html  styles.css
